# randomtask

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
crates/app/: Cargo.toml
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/crypto/: Cargo.toml
crates/server/: Cargo.toml
crates/storage/: Cargo.toml
crates/sync/: Cargo.toml
