[workspace]
members = [
    "crates/core",
    "crates/crypto",
    "crates/sync",
    "crates/storage",
    "crates/server",
    "crates/app",
    "crates/cli"
]

resolver = "2"

[workspace.dependencies]
axum = { version = "=0.8.8" }
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "=0.8.6", features = ["postgres", "sqlite", "runtime-tokio-rustls"] }
dioxus = { version = "=0.7.3" }

serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149" }
thiserror = { version = "=2.0.18" }
uuid = { version = "=1.22.0", features = ["serde", "v4"]}
time = { version = "=0.3.47", features = ["serde"]}
tracing = { version = "=0.1.44" }
tracing-subscriber = { version = "=0.3.22", features = ["fmt", "env-filter"] }
tower-http = { version = "=0.6.8", features = ["trace", "cors"]}
clap = { version = "=4.5.60", features = ["derive"]}
zeroize = { version = "=1.8.2"}