[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
description = "Cryptography and key management for RandomTask"
license = "GPL-3.0-or-later"
authors = ["swordskode"]
repository = "https://github.com/swordskode/randomtask"

[dependencies]
core = { path = "../core" }

serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
uuid.workspace = true