[package]
name = "server"
version = "0.1.0"
edition = "2024"
description = "RandomTask API server"
license = "GPL-3.0-or-later"
authors = ["swordskode"]
repository = "https://github.com/swordskode/randomtask"

[dependencies]
core = { path = "../core" }
crypto = { path = "../crypto" }
sync = { path = "../sync" }
storage = { path = "../storage" }

axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true