[package]
name = "sync"
version = "0.1.0"
edition = "2024"
description = "Sync engine and conflict resolution for RandomTask"
license = "GPL-3.0-or-later"
authors = ["swordskode"]
repository = "https://github.com/swordskode/randomtask"

[dependencies]
core = { path = "../core" }
crypto = { path = "../crypto" }

serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true